added svgs for the hives

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -6,7 +6,11 @@
 
 	/* TODO remove debug apply */
 	
-	@apply outline-dashed outline-2 outline-lime-200;
+	/* @apply outline-dashed outline-2 outline-lime-200; */
+}
+
+html {
+	@apply w-screen h-screen overflow-hidden;
 }
 
 .active {
