added hive details page

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -6,7 +6,7 @@
 
 	/* TODO remove debug apply */
 	
-	/* @apply outline-dashed outline-2 outline-lime-200; */
+	@apply outline-dashed outline-2 outline-lime-200;
 }
 
 html {
