--- a/packages/client/src/custom.css
+++ b/packages/client/src/custom.css
@@ -4,10 +4,16 @@
 	@apply text-three
 }
 
+
+
 .btn-primary {
 	@apply	hover:bg-one hover:text-three 
 	rounded py-2 px-4 text-xl font-bold 
 	bg-two bg-opacity-80 hover:bg-opacity-90
+}
+
+.btn-secondary {
+	@apply text-five h-min p-2 bg-two
 }
 
 .toHomeButton {
