added some styles in inspection layout

--- a/packages/client/src/custom.css
+++ b/packages/client/src/custom.css
@@ -13,7 +13,7 @@
 }
 
 .btn-secondary {
-	@apply text-one h-min p-2 bg-two hover:scale-105
+	@apply text-one h-min p-2 bg-five hover:scale-105 rounded-lg
 }
 
 .toHomeButton {
